<resources>
    <string name="app_name">To Do List</string>
    <string name="task_name">task name</string>
    <string name="important_task">important</string>
    <string name="done">DONE</string>
    <string name="add_task">add task</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort">sort</string>
    <string name="menu_sort_by_name">Sort By Name</string>
    <string name="menu_sort_by_date_created">Sort By Date Created</string>
    <string name="menu_hide_completed_tasks">Hide completed tasks</string>
    <string name="menu_delete_all_completed_tasks">Delete all completed tasks</string>
    <string name="menu_delete_all_tasks">Delete all tasks</string>
    <string name="menu_dialog_delete_all_title">Delete All</string>
    <string name="menu_dialog_delete_all_msg">Are you sure you want to delete everything?</string>
    <string name="menu_dialog_delete_all_cancel">Cancel</string>
    <string name="menu_dialog_delete_all_yes">Yes</string>
    <string name="menu_dialog_delete_all_completed_title">Delete Completed</string>
    <string name="menu_dialog_delete_all_completed_msg">Are you sure you want to delete all completed tasks?</string>
    <string name="tasks_Label">Tasks</string>
    <string name="snackbar_task_deleted">task deleted</string>
    <string name="snackbar_undo">UNDO</string>
    <string name="new_task_label">New Task</string>
    <string name="edit_task_label">Edit Task</string>
    <string name="created">Created :</string>
    <string name="about_us">about us</string>
    <string name="about_us_description">Our permission is to produce applications for personal growth. For first step we develop this app for you guys. we hope it will be useful, and help you to reach your daily goals.</string>
    <string name="version">Version 1.0.0 </string>
    <string name="about_us_label">About Us</string>
    <string name="about_app_title">About (To Do List)</string>
    <string name="app_description">When you list your daily goals, in addition to reminding you what you wanna do, it helps you identify your priorities. And when your day is over, you can evaluate yourself.\n\nThis app is a great tool for those people who:</string>
    <string name="descrip_no_1">They are not used to planning and are new to the field </string>
    <string name="descrip_no_2">Those who usually keep their important daily tasks up to last minutes and they do not do them </string>
    <string name="about_us_title">About us</string>
    <string name="contact_us_title">Contact us</string>
    <string name="contact_us_description">if you have any suggestions, please let us know. You can send an email to the address below </string>
    <string name="email">ftm.amani95@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="dialog_onboarding_title">go to tips</string>
    <string name="dialog_onboarding_msg">Do you wanna see tips?</string>
    <string name="dialog_onboarding_no">No</string>
    <string name="dialog_onboarding_yes">Yes</string>
    <string name="help">Help</string>
</resources>